syntax = "proto3";

import "errors.proto";

option optimize_for = SPEED;
option go_package = "./vearchpb";
package vearchpb;

enum FieldType {
  INT = 0;
  LONG = 1;
  FLOAT = 2;
  DOUBLE = 3;
  STRING = 4;
  VECTOR = 5;
  BOOL = 6;
  DATE = 7;
  STRINGARRAY = 8;
}

// Whether index this field
enum FieldOption {
  Null = 0;
  Index = 1;
}

message Field {
  string name = 1;
  FieldType type = 2;
  bytes value = 3;
  FieldOption option = 4;
}

message Document {
  string p_key = 1;
  repeated Field fields = 2;
}

message Item {
  Error err = 1;
  Document doc = 2;
  string msg = 3;
}

//*********************** Tabel *********************** //

message VectorMetaInfo {
  int32 dimension = 1;
  enum ValueType {
    FLOAT = 0;
    UINT8 = 1; // binary
  }
  ValueType value_type = 2;
  enum StoreType {
    MEMORYONLY = 0;
    ROCKSDB = 1;
  }
  StoreType store_type = 3;
  string store_param = 4;
}

message FieldMetaInfo {
  string name = 1;
  FieldType data_type = 2;
  bool is_index = 3;
  VectorMetaInfo vector_meta_info = 4; // nil if data_type is not vector
}

message TableMetaInfo {
  string primary_key_name = 1;
  FieldType primary_key_type = 2;
  int32 partitions_num = 3;
  int32 replicas_num = 4;
  repeated FieldMetaInfo field_meta_info = 5;
}

message Table {
  string name = 1;
  TableMetaInfo table_meta_info = 2;
}

//*********************** DB *********************** //

message DB {
  string name = 1;
  repeated Table tables = 2;

  map<string, string> user_password_pair = 3;
}
